--- a/html/offerte.html
+++ b/html/offerte.html
@@ -7,19 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>GRANDI OFFERTE NELLE CITTÀ ITALIANE </br></br>
-        Bologna €15/giorno </br>
-        Catania €18/giorno </br>
-        Monterosso Almo €17/giorno </br>
-        Milano €12/giorno </br>
-        Firenze €18/giorno </br> 
-        Roma €13/giorno </br>
-        Ragusa €9/giorno </br>
-        Lecce €8/giorno </br>
-        Napoli €11/giorno </br>
-        Palermo €9/giorno </br>
-        Torino €12/giorno </br>
-        Venezia €17/giorno </br>
-    </h3>
+    <br>
+    <h3 style="color:rgd(15, 110, 110);>GRANDI OFFERTE NELLE CITTÀ ITALIANE!</h3>
+    <hr>
+    <h5>FINO AL 20% DI SCONTO! SOLO PER UN PERIODO LIMITATO</h5>
+    <p>
+        Buone notizie! RentACar offre un' offerta speciale per i suoi clienti. Offriamo sconti per le località selezionate nel nostro territorio. L'offerta è limitata ed è valida fino al 
+        <strong>ottobre 2021</strong>
+        .Inoltre, prenotando in anticipo riuscirai a risparmiare più del
+        <strong>10%</strong>
+        .<br>
+        Con noi potrai ottenere il miglior prezzo per il noleggio del tuo veicolo,oltre ad una grande varietà di sconti e offerte.<br>
+        Risparmia durante il tuo viaggio senza dover rinunciare ad un servizio di qualità.
+    </p>
 </body>
 </html>
