--- a/html/prezzi.html
+++ b/html/prezzi.html
@@ -7,8 +7,20 @@
         <title>Document</title>
     </head>
     <body>
-        <div>
-            <h2>SCOPRI I NOSTRI PREZZI!</h2>
-        </div>
+        <br>
+        <h3 style="color:rgb(15, 110, 110);">SCOPRI I NOSTRI PREZZI NELLE CITTÀ ITALIANE!</h3>
+        <hr>
+        Bologna €15/giorno </br>
+        Catania €18/giorno </br>
+        Monterosso Almo €17/giorno </br>
+        Milano €12/giorno </br>
+        Firenze €18/giorno </br> 
+        Roma €13/giorno </br>
+        Ragusa €9/giorno </br>
+        Lecce €8/giorno </br>
+        Napoli €11/giorno </br>
+        Palermo €9/giorno </br>
+        Torino €12/giorno </br>
+        Venezia €17/giorno </br>
     </body>
 </html>
