--- a/html/sceglinoi.html
+++ b/html/sceglinoi.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>SCEGLI NOI!</h1>
+    <br>
+    <h3 style="color:rgb(15, 110, 110);">SCEGLI NOI!</h3>
+    
 </body>
 </html>
