--- a/html/offerte.html
+++ b/html/offerte.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <br>
-    <h3 style="color:rgd(15, 110, 110);>GRANDI OFFERTE NELLE CITTÀ ITALIANE!</h3>
+    <h3 style="color:rgd(15, 110, 110);">OFFERTE DEL MESE!</h3>
     <hr>
     <h5>FINO AL 20% DI SCONTO! SOLO PER UN PERIODO LIMITATO</h5>
     <p>
