--- a/html/sceglinoi.html
+++ b/html/sceglinoi.html
@@ -9,6 +9,10 @@
 <body>
     <br>
     <h3 style="color:rgb(15, 110, 110);">SCEGLI NOI!</h3>
-    
+    <hr>
+    <h5>PERCHÈ PRENOTARE CON RentACar</h5>
+    <p>
+        RentACar è un partner affidabile per i tuoi viaggi. Offriamo con facilità l'auto più adatta alla tua vacanza. Ci concentriamo principalmente sulla qualità che intendiamo offrire e sulla richiesta del cliente. Garantiamo auto pulite.
+    </p>
 </body>
 </html>
