Removed ConfermaOrdineModal, added spinner btnPaga

--- a/html/offerte.html
+++ b/html/offerte.html
@@ -18,7 +18,9 @@
         <strong>10%</strong>
         .<br>
         Con noi potrai ottenere il miglior prezzo per il noleggio del tuo veicolo,oltre ad una grande varietà di sconti e offerte.<br>
-        Risparmia durante il tuo viaggio senza dover rinunciare ad un servizio di qualità.
+        Risparmia durante il tuo viaggio senza dover rinunciare ad un servizio di qualità. </br>
+        
+        <h3>Troverai lo sconto gia applicato con il codice "JUNE21" ad ogni auto pronta per il noleggio! </h3>
     </p>
 </body>
 </html>
