--- a/html/prezzi.html
+++ b/html/prezzi.html
@@ -22,5 +22,6 @@
         Palermo €9/giorno </br>
         Torino €12/giorno </br>
         Venezia €17/giorno </br>
+        Trieste €10/giorno </br>
     </body>
 </html>
